plang/testing/logs/false-incorrect/117/program117.p.p
bFgb.

ak.

pwxQ2 (gI knp) FgLgV.


uB tG6 M :- (djca n9W sLqd, (qt770 (JKcB) V r (Va)), cxJB o iO5zj B), gyhlX Mql Z (PzT3) l.

hli :- (jx5 (G) (T8R) sDa (NYu)); (((bE (hN4 wQPf) Ak yvyXP)), emh (lU RKW3 PVy0 yC4 I3xAe)).


v (znhE (a8No (HfAp) s (H7n)) Is) (A).

j4y.


u3 wQ00 eAEj6 :- xNJ Q X (tOj (WfLn)), wu, gc5 U0g (a6UY (bVqq KewOk) (xJfo (iIv MWm g6Vss))) yZfXE; sUiv (Q4h); p82O ED (mcVj (H7) (X) lWOk (LhQRD)) (A), cE x Li; z04 ocY (A) (txajI), tnPCY (Fm4tA) (HQzP); sQHa2 s (M0E0E) SXR3v, ys1u q8FTa (x5IME Y PN08); e9R, qefrL.
bHF.
pSi d (A2S) ln Vcg :- (xDlc fFW xztJV (cLunl hx iyP (HXO1m) fURPW); (jtq; jK3 (OQhED) zbV ax9 (SwBO2); pXUs (i jtg (aiy) (YKraw) (A)) (OWzk))).

iKjz mFEh (UJv) :- ((kiEkG f104f lHOmH qq7Ib mEW), kmE EuG (eB5 (G8Dd)) (Ul) (KtS), ffyJO oHm, (bX (OGtm) a (cga (ZEA) V (OM) hZG)), jjnD9, voMky (ExKg) (s7 pYy (K)); b9ux (TanvD) (c gy6B r9X7) O, narJ (MIOU)).
? upOXx.
